# saic-python-client

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/saic_client_tosate/: abrp_api.py  publisher.py  saic_api.py  ws_api.py
src/saic_client_tosate/ota_v1_1/: Message.py  data_model.py
src/saic_client_tosate/ota_v2_1/: Message.py  data_model.py
src/saic_client_tosate/ota_v3_0/: Message.py  data_model.py
src/saic_ismart_client/: abrp_api.py  common_model.py  exceptions.py  message_decoder.py  saic_api.py
src/saic_ismart_client/ASN.1_schema/v1_1/: ApplicationData.asn1
src/saic_ismart_client/ASN.1_schema/v3_0/: ApplicationData.asn1
src/saic_ismart_client/ota_v1_1/: Message.py  data_model.py
src/saic_ismart_client/ota_v2_1/: Message.py  data_model.py
src/saic_ismart_client/ota_v3_0/: Message.py  data_model.py
src/saic_ismart_client/rest_v2/: api.py  model.py
tests/: test_Message_v1_1.py  test_Message_v2_1.py  test_Message_v3_0.py  test_abrp_api.py  test_saic_api.py  test_ws_api.py
