[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saic_client_tosate"
version = "0.1.0"
authors = [
    { name = "Thomas Salm", email="saic-client@devtom.de"},
]
dependencies = [
    "asn1tools >= 0.166.0",
    "requests >= 2.28.2",
    "urllib3 >= 1.26.15",
]
description = "SAIC client library (MG iSMART)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tosate/saic-python-client"
"Bug Tracker" = "https://github.com/tosate/saic-python-client/issues"
