[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saic_ismart_client"
version = "1.0.0"
authors = [
    { name = "Thomas Salm", email="saic-python-client@devtom.de"},
]
dependencies = [
    "asn1tools >= 0.165.0",
    "requests >= 2.28.2",
    "urllib3 >= 1.26.14",
]
description = "SAIC client library (MG iSMART)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SAIC-iSmart-API/saic-python-client"
"Bug Tracker" = "https://github.com/SAIC-iSmart-API/saic-python-client/issues"
