[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saic_ismart_client"
version = "1.4.8"
authors = [
    { name = "Thomas Salm", email="saic-python-client@devtom.de"},
]
dependencies = [
    "asn1tools >= 0.166.0",
    "requests >= 2.31.0",
    "urllib3 >= 2.0.3",
]
description = "SAIC client library (MG iSMART)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SAIC-iSmart-API/saic-python-client"
"Bug Tracker" = "https://github.com/SAIC-iSmart-API/saic-python-client/issues"
